--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   ],
   "scripts": {
     "build": "npm run build:esbuild",
-    "build:esbuild": "esbuild lib/**/*.ts --outdir=dist/lib --format=cjs --target=es2018 --sourcemap",
+    "build:esbuild": "esbuild lib/*.ts lib/widgets/*.ts --outdir=dist --format=cjs --target=es2018 --sourcemap",
     "build:tsc": "tsc",
     "build-watch": "tsc --watch",
+    "build:tests": "esbuild test/*.ts --outdir=test-dist --format=cjs --target=es2018",
     "type-check": "tsc --noEmit",
     "lint": "eslint lib/",
     "test": "tsx test-runner.ts",
+    "test:fast": "./run-fast-tests.sh",
     "dev": "tsx"
   },
   "version": "0.0.0-development",
@@ -55,7 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^24.0.2",
+    "@types/node": "^24.0.3",
     "esbuild": "^0.25.5",
     "eslint": "^5.10.0",
     "ts-node": "^10.9.2",
