--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "version": "0.0.0-development",
   "license": "MIT",
-  "main": "./index.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "bin": "./bin/tput.js",
   "preferGlobal": false,
   "repository": "git://github.com/eirikb/neo-neo-blessed.git",
