Fixing libs/deps

--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
   "dependencies": {
     "@xterm/xterm": "^5.5.0",
     "crc-32": "^1.2.2",
+    "eastasianwidth": "^0.3.0",
     "jimp": "^1.6.0",
     "node-pty": "^1.0.0",
-    "pngjs": "^7.0.0"
+    "pngjs": "^7.0.0",
+    "unicode-properties": "^1.4.1"
   },
   "lint-staged": {
     "*.{js,ts,tsx,json,md}": [
