--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "license": "MIT",
   "main": "./index.js",
   "types": "./index.d.ts",
-  "bin": "./bin/tput.js",
+  "bin": "./bin/tput.ts",
   "preferGlobal": false,
   "repository": "git://github.com/eirikb/neo-neo-blessed.git",
   "homepage": "https://github.com/eirikb/neo-neo-blessed",
