--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build-watch": "tsc --watch",
     "build:tests": "esbuild test/*.ts --outdir=test-dist --format=cjs --target=es2018",
     "type-check": "echo 'TypeScript type checking limited to colors.ts and unicode.ts due to legacy codebase complexity' && tsc --noEmit",
+    "type-check:strict": "tsc --project tsconfig.strict.json --noEmit",
     "lint": "eslint lib/",
     "test": "tsx test-runner.ts",
     "test:fast": "./run-fast-tests.sh",
@@ -30,7 +31,7 @@
   "license": "MIT",
   "main": "./index.js",
   "types": "./index.d.ts",
-  "bin": "./bin/tput.js",
+  "bin": "./bin/tput.ts",
   "preferGlobal": false,
   "repository": "git://github.com/eirikb/neo-neo-blessed.git",
   "homepage": "https://github.com/eirikb/neo-neo-blessed",
@@ -61,10 +62,11 @@
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
+    "@types/pngjs": "^6.0.5",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "esbuild": "^0.25.5",
-    "eslint": "^8.57.1",
+    "eslint": "^9.29.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
@@ -73,8 +75,13 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "node-pty": "^0.9.0",
-    "term.js": "0.0.7"
+    "@xterm/xterm": "^5.5.0",
+    "crc-32": "^1.2.2",
+    "eastasianwidth": "^0.3.0",
+    "jimp": "^1.6.0",
+    "node-pty": "^1.0.0",
+    "pngjs": "^7.0.0",
+    "unicode-properties": "^1.4.1"
   },
   "lint-staged": {
     "*.{js,ts,tsx,json,md}": [
