--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     }
   ],
   "scripts": {
-    "build": "npm run build:esbuild",
-    "build:esbuild": "esbuild lib/*.ts lib/widgets/*.ts --outdir=dist --format=cjs --target=es2018 --sourcemap --minify",
-    "build:dev": "esbuild lib/*.ts lib/widgets/*.ts --outdir=dist --format=cjs --target=es2018 --sourcemap",
+    "build": "tsup",
+    "build:prod": "NODE_ENV=production tsup",
+    "build:dev": "tsup --minify=false",
+    "build:watch": "tsup --watch",
     "build:tsc": "tsc",
-    "build-watch": "tsc --watch",
     "build:tests": "esbuild test/*.ts --outdir=test-dist --format=cjs --target=es2018",
     "type-check": "echo 'TypeScript type checking limited to colors.ts and unicode.ts due to legacy codebase complexity' && tsc --noEmit",
     "type-check:strict": "tsc --project tsconfig.strict.json --noEmit",
@@ -29,8 +29,8 @@
   },
   "version": "0.0.0-development",
   "license": "MIT",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/blessed.js",
+  "types": "./dist/blessed.d.ts",
   "bin": "./bin/tput.ts",
   "preferGlobal": false,
   "repository": "git://github.com/eirikb/neo-neo-blessed.git",
@@ -53,7 +53,7 @@
     "termcap"
   ],
   "engines": {
-    "node": ">= 8.0.0"
+    "node": ">= 18.0.0"
   },
   "browserify": {
     "transform": [
@@ -67,10 +67,12 @@
     "@typescript-eslint/parser": "^8.34.1",
     "esbuild": "^0.25.5",
     "eslint": "^9.29.0",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
