--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,7 +1,8 @@
 name: Release
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - main
 
@@ -12,6 +13,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     permissions:
       contents: write
       issues: write
@@ -28,6 +30,8 @@ jobs:
           cache: 'npm'
 
       - run: npm ci || npm install
+
+      - run: npm run build
 
       # lol
       #      - run: npm run lint
