--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,8 +1,7 @@
 name: Release
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - main
 
@@ -13,7 +12,6 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
     permissions:
       contents: write
       issues: write
@@ -32,9 +30,6 @@ jobs:
       - run: npm ci || npm install
 
       - run: npm run build
-
-      # lol
-      #      - run: npm run lint
 
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
