--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
+          node-version: 'lts/*'
           cache: 'npm'
 
       - run: npm ci || npm install
@@ -27,6 +27,5 @@ jobs:
       - run: npm run type-check:strict
 
       - run: npm run lint
-
 # Too slow
 #      - run: npm test
