--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -27,5 +27,18 @@ jobs:
       - run: npm run type-check:strict
 
       - run: npm run lint
-# Too slow
-#      - run: npm test
+
+      # Compile TypeScript modules needed for unit tests
+      - name: Compile test modules
+        run: |
+          npx tsc lib/colors.ts --target es2018 --module commonjs --outDir lib --allowJs
+          npx tsc lib/unicode.ts --target es2018 --module commonjs --outDir lib --allowJs  
+          npx tsc lib/helpers.ts --target es2018 --module commonjs --outDir lib --allowJs
+
+      # Apply cache bug fix to colors.js
+      - name: Fix cache bug in colors.js
+        run: |
+          sed -i 's/!== null/!= null/g' lib/colors.js
+
+      # Run fast unit tests (62 tests in ~700ms)
+      - run: npm test
