fix: more tests

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test:prepare": "npx tsc lib/colors.ts --target es2018 --module commonjs --outDir lib --allowJs && npx tsc lib/unicode.ts --target es2018 --module commonjs --outDir lib --allowJs && npx tsc lib/helpers.ts --target es2018 --module commonjs --outDir lib --allowJs && sed -i 's/!== null/!= null/g' lib/colors.js",
-    "test": "npm run test:prepare && vitest run",
-    "test:watch": "npm run test:prepare && vitest",
-    "test:ui": "npm run test:prepare && vitest --ui",
+    "test": "npm run test:prepare && vitest run --config vitest.config.mjs",
+    "test:watch": "npm run test:prepare && vitest --config vitest.config.mjs",
+    "test:ui": "npm run test:prepare && vitest --ui --config vitest.config.mjs",
     "test:integration": "tsx test-runner.ts",
     "test:integration:fast": "tsx test-runner-fast.ts",
     "test:examples": "echo 'Run examples with: npm run dev example/<filename>.ts'",
