--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -34,6 +34,7 @@ jobs:
           npx tsc lib/colors.ts --target es2018 --module commonjs --outDir lib --allowJs
           npx tsc lib/unicode.ts --target es2018 --module commonjs --outDir lib --allowJs  
           npx tsc lib/helpers.ts --target es2018 --module commonjs --outDir lib --allowJs
+          npx tsc lib/keys.ts --target es2018 --module commonjs --outDir lib --allowJs
 
       # Apply cache bug fix to colors.js
       - name: Fix cache bug in colors.js
