--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint lib/",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test:prepare": "npx tsc lib/colors.ts --target es2018 --module commonjs --outDir lib --allowJs && npx tsc lib/unicode.ts --target es2018 --module commonjs --outDir lib --allowJs && npx tsc lib/helpers.ts --target es2018 --module commonjs --outDir lib --allowJs && sed -i 's/!== null/!= null/g' lib/colors.js",
+    "test:prepare": "npx tsc lib/colors.ts --target es2018 --module commonjs --outDir lib --allowJs && npx tsc lib/unicode.ts --target es2018 --module commonjs --outDir lib --allowJs && npx tsc lib/helpers.ts --target es2018 --module commonjs --outDir lib --allowJs && npx tsc lib/keys.ts --target es2018 --module commonjs --outDir lib --allowJs && sed -i 's/!== null/!= null/g' lib/colors.js",
     "test": "npm run test:prepare && vitest run --config vitest.config.mjs",
     "test:watch": "npm run test:prepare && vitest --config vitest.config.mjs",
     "test:ui": "npm run test:prepare && vitest --ui --config vitest.config.mjs",
